fix: setting clear on search results to alleviate badge overflow
Issue: #232

--- a/modules/search/css/components/Results.less
+++ b/modules/search/css/components/Results.less
@@ -15,6 +15,7 @@
 
     li {
         padding: 0.25em 0.6em;
+        clear: both;
         line-height: 1.43em;
 
         &:focus,
